public/common/login.css
body {
    margin: 0;
    padding: 0;
    user-select: none;
    height: 100vh;
}

a {
    color: var(--main-fg);
    text-decoration: underline;
}

.sunlight {
    z-index: 100;
}

.login-form {
    color: var(--sidebar-fg);
    width: 40vw;
    min-height: fit-content;
    height: 100vh;
    background-color: var(--login-bg);
    backdrop-filter: blur(52px);
    border-right: 1px solid var(--login-border);
    border-radius: 0px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: var(--big-gap);
}

#login-form {
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
}

.forgot {
    text-align: center;
}

.login-input-form {
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
}

.login-field {
    width: 100%;
    background-color: var(--login-field-bg);
    color: var(--main-fg);
    font-family: var(--main-font);
    padding: var(--medium-gap);
    box-sizing: border-box;
    border-radius: var(--input-field-radius);
    border: none;
    box-shadow: inset 0 0 0 1px var(--login-border);
    font-size: 1rem;
}

.login-button {
    background-color: var(--login-field-bg);
    color: var(--main-fg);
    box-shadow: inset 0 0 0 1px var(--login-border);
    font-family: var(--main-font);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--small-gap);
    padding: 0;
}

.login-button i {
    font-size: 1.2rem;
}

.login-field, .login-button {
    transition: color 0.15s, background-color 0.15s;
}

.login-button:hover, .login-field:hover {
    background-color: var(--login-hover-bg);
}

.login-button:active {
    background-color: var(--accent-light);
    color: var(--accent-dark);
    box-shadow: inset 0 0 0 1px var(--accent-dark);
}

.login-button-wrapper {
    justify-content: center;
    text-decoration: none;
}

@media screen and (max-width: 800px) {
    .login-form {
        width: 100vw;
        padding: var(--medium-gap);
    }

    .login-field {
        padding: 1.5rem;
    }
}

